--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
     "firebase-functions": "^3.18.0"
   },
   "devDependencies": {
+    "dotenv": "^16.0.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
