--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "firebase": "^9.7.0",
     "firebase-admin": "^10.0.2",
