--- a/functions/package.json
+++ b/functions/package.json
@@ -14,16 +14,19 @@
   },
   "main": "index.js",
   "dependencies": {
+    "-": "^0.0.1",
+    "babel-eslint": "^8.2.6",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
     "firebase": "^9.7.0",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.21.0"
+    "firebase-functions": "^3.21.0",
+    "g": "^2.0.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
-    "eslint": "^8.9.0",
+    "eslint": "^4.19.1",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
